<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">极简闹钟</string>
    <string name="title">极简闹钟</string>
    <string name="subtitle">选择时间设置闹钟</string>
    <string name="my_alarms">我的闹钟</string>
    <string name="quick_add">快速添加</string>
    <string name="other_time">其他时间</string>
    <string name="no_alarms">暂无闹钟</string>
    <string name="tap_card_to_add">点击下方卡片添加闹钟</string>
    <string name="alarm_added">闹钟已添加</string>
    <string name="alarm_enabled">闹钟已开启</string>
    <string name="alarm_disabled">闹钟已关闭</string>
    <string name="alarm_deleted">闹钟已删除</string>
    <string name="delete_alarm">删除闹钟</string>
    <string name="confirm_delete">确定要删除这个闹钟吗？</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="alarm_ringing">闹钟响了！</string>
    <string name="stop">停止</string>
    <string name="snooze">等会</string>
    <string name="confirm_schedule_tomorrow">是否调度为明天同一时间？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="scheduled_for_tomorrow">已调度为明天</string>
    <string name="snoozed_for_5min">5分钟后再次响铃</string>
    <string name="enter_alarm_label">输入闹钟描述</string>
    <string name="label_hint">输入描述（可选）</string>
</resources>
